# scriptrag

./: .bandit-report.json  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  .sqlfluffignore  .terragon-setup-complete  .yamllint.yaml  AGENTS.md  AI_CONTENT_INDICATORS_DATABASE.md  ARCHITECTURE.md  BULK_IMPORT_IMPROVEMENTS.md  CI_ISSUE.md  CLAUDE.md  Dockerfile  FILE_SIZE_LIMITS_SUMMARY.md  ISSUE_SQLITE_VSS_MACOS.md  MANIFEST.in  MENTOR_SYSTEM.md  MIGRATION.md  MIGRATION_PLAN_SQLITE_VEC.md  MODERNIZATION.md  Makefile  PROJECT_ANALYSIS.md  README.md  REFACTORING_RECOMMENDATIONS.md  SCENE_INDEX_UPDATE_FINDINGS.md  SETUP_COMPLETE.md  SETUP_SUMMARY.md  SIMPLIFICATION_SUMMARY.md  STORY_POINTS_PHASE_11.md  TERRAGON_SETUP.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_PLAN.md  TEST_IMPROVEMENTS_SUMMARY.md  (+29 more)
.claude/: HOOKS.md  config-python-only.json  config.json
.claude/agents/: build-conspiracy-analyst.md  ci-mulder.md  commit-crafter.md  commit-quentin.md  docstring-rogers.md  docstring-writer.md  mypy-fixer.md  project-lumbergh.md  project-updater.md  research-notetaker.md  ruff-fixer.md  ruff-house.md  screenplay-expert.md  screenplay-sorkin.md  test-fixer.md  test-holmes.md  test-minimal.md  type-veronica.md
.claude/commands/: ci-cycle.md  ci-failures.md  commit.md  gh-checks.md  test-coverage.md  user-testing.md
.claude/hooks/: README.md  auto-format.sh  format-python.sh
.github/: dependabot.yml
.github/scripts/: check_fixture_integrity.py
.github/workflows/: README.md  ci.yml  claude-code-review.yml  claude-dispatch.yml  claude.yml  post-ci.yml  test-failure-diagnostics.yml
MagicMock/Path()/: 140084493626832  140515050884496  140582952520336  140706588314576
data/: .gitkeep
docs/: API.md  CLI_REFACTORING.md  ITERATION_PATTERNS.md  MCP_ENHANCED.md  MOCK_FILE_DETECTION.md  PLATFORM_SETUP.md  README.md  SEARCH_API.md  SQL_STYLE_GUIDE.md  TESTING.md  TESTING_LLM.md  TESTING_PERFORMANCE.md  api-reference.md  api.md  architecture.md  bulk_import_guide.md  ci-test-failure-retrieval.md  configuration.md  developer-guide.md  development.md  example-insight-agent.md  fountain-tv-format.md  index.md  installation.md  mcp-server.md  mcp_server.md  mcp_tools.md  refactoring-guide.md  semantic-search.md  troubleshooting.md  usage.md  user-guide.md
docs/api/: bulk_import.md
docs/mentors/: story_shape_theory.md
docs/status/: weekly-report-2025-10-12.md  weekly-status-2025-10-05.md
docs/status-reports/: 2025-09-07-weekly-status.md  README.md  week-2025-34.md  week-2025-35.md
examples/: .env.example  README.md  build_knowledge_graph.py  cli_refactoring_demo.py  config-ci.yaml  config-dev.yaml  config-local.yaml  config-prod.yaml  llm_client_usage.py  mcp_client_config.json  mcp_usage_examples.md  scene_update_example.sh  scriptrag.toml.example  scriptrag.yaml.example
examples/data/: sample_screenplay.fountain
exports/the_last_vandal/: the_last_vandal.fountain
mypy-analysis/: any-exprs.txt  types-of-anys.txt
mypy-check-progress/: any-exprs.txt  types-of-anys.txt
mypy-coverage/: any-exprs.txt  types-of-anys.txt
mypy-final-check/: any-exprs.txt
mypy-final-coverage/: types-of-anys.txt
mypy-index-detailed/: any-exprs.txt  types-of-anys.txt
mypy-progress-2/: any-exprs.txt  types-of-anys.txt
mypy-progress-current/: any-exprs.txt  types-of-anys.txt
mypy-project-final/: any-exprs.txt  types-of-anys.txt
mypy-scene-final/: any-exprs.txt  types-of-anys.txt
mypy-scene-report/: any-exprs.txt  types-of-anys.txt
mypy-text-report/: any-exprs.txt  types-of-anys.txt
mypy-text-report-improved/: any-exprs.txt  types-of-anys.txt
mypy-text-report-latest/: any-exprs.txt  types-of-anys.txt
mypy-text-report-new/: any-exprs.txt  types-of-anys.txt
research/notes/: dev-setup-new-repo-checkout-session-2025-07-29.md  script-analysis-session-2025-07-31.md  user-testing-session-2025-07-29.md
scripts/: add_test_markers.py  check_file_size.py  check_logging_usage.py
src/scriptrag/: CLAUDE.md  __init__.py  __main__.py  cli.py  exceptions.py  main.py  mcp_server.py  mcp_server.py.backup  py.typed  scene_manager.py  types.py
stubs/jouvence/: __init__.pyi  document.pyi  parser.pyi
test_data/: test.fountain
tests/: CLAUDE.md  MOCK_DETECTION_SUMMARY.md  __init__.py  ci_mock_detection.py  cli_fixtures.py  conftest.py  conftest_mock_detection.py  detect_mock_files.py  fixtures.py  llm_fixtures.py  llm_test_utils.py  platform_utils.py  run_with_mock_detection.sh  test_api.py  test_api_app.py  test_api_db_operations.py  test_api_embeddings.py  test_api_graphs.py  test_api_scene_operations_phase_5_2.py  test_api_scene_ordering.py  test_api_scenes.py  test_api_validation.py  test_bulk_import.py  test_bulk_import_error_handling.py  test_bulk_import_integration.py  test_bulk_import_validation.py  test_cli_config_option.py  test_cli_error_handling.py  test_database.py  test_database_connection.py  test_database_initialization_integration.py  test_database_migrations.py  test_database_schema.py  test_database_statistics.py  test_database_vectors.py  test_db_cli.py  test_e2e_workflows.py  test_embedding_integration.py  test_embedding_pipeline.py  test_exception_handling.py  (+55 more)
tests/agents/: test_agent_spec.py  test_loader.py  test_markdown_agent_analyzer.py
tests/api/: test_analyze_markdown_agents.py  test_analyze_validation_errors.py  test_scene_parser.py  test_scene_validator_comprehensive.py
tests/cli/: base.py  test_command_composer.py  test_coverage_improvements.py  test_file_validator_extended.py  test_formatters.py  test_formatters_extended.py  test_scene_formatter.py  test_validators.py
tests/config/: test_logging.py  test_settings.py
tests/database/: test_content_extractor.py  test_knowledge_graph_builder.py
tests/factories/: __init__.py  api_response_factory.py  scene_factory.py  script_factory.py
tests/fixtures/: character_backstory.md  database.py  fast_llm_mocks.py  mock_props_analyzer.py  script_bible.md  world_lore.md
tests/integration/: CLAUDE.md  __init__.py  (+24 more)
(+586 files in other folders)
